Delete lib and create makefile